<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/appClr"
    tools:context=".MainActivity">

    <!--<ImageView
        android:id="@+id/imgg"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:src="@drawable/name_germany" />-->

    <TextView
        android:id="@+id/title_lang"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Language"
        android:visibility="gone"
        android:textColor="@color/white"
        android:gravity="center"
        android:layout_margin="10dp"
        android:textSize="15sp"/>

    <TextView
        android:id="@+id/title_main"
        android:layout_below="@+id/title_lang"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/germany_tv_radio"
        android:textColor="@color/baseClr"
        android:gravity="center"
        android:layout_margin="10dp"
        android:textSize="25sp"/>

    <HorizontalScrollView
        android:id="@+id/top_scroll"
        android:layout_width="match_parent"
        android:layout_below="@+id/title_main"
        android:background="@drawable/shape_appclr2"
        android:layout_margin="20dp"
        android:padding="10dp"
        android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:id="@+id/card_fav_geramny"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    app:cardBackgroundColor="@color/cardClr"
                    app:cardElevation="5dp"
                    app:cardCornerRadius="10dp"
                    android:layout_margin="10dp"
                    android:padding="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:src="@drawable/fav"
                            android:background="@color/white"/>

                        <TextView
                            android:id="@+id/text_fav"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:textSize="15sp"
                            android:layout_margin="5dp"
                            android:text="@string/favorites"/>

                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/card_setting_geramny"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    app:cardBackgroundColor="@color/cardClr"
                    app:cardElevation="5dp"
                    app:cardCornerRadius="10dp"
                    android:layout_margin="10dp"
                    android:padding="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:src="@drawable/settings"
                            android:background="@color/white"/>

                        <TextView
                            android:id="@+id/text_setting"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:textSize="15sp"
                            android:layout_margin="5dp"
                            android:text="@string/settings"/>

                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/card_help_geramny"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    app:cardBackgroundColor="@color/cardClr"
                    app:cardElevation="5dp"
                    app:cardCornerRadius="10dp"
                    android:layout_margin="10dp"
                    android:padding="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:src="@drawable/help"
                            android:background="@color/white"/>

                        <TextView
                            android:id="@+id/text_help"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:textSize="15sp"
                            android:layout_margin="5dp"
                            android:text="@string/help"/>

                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/card_policy_geramny"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    app:cardBackgroundColor="@color/cardClr"
                    app:cardElevation="5dp"
                    app:cardCornerRadius="10dp"
                    android:layout_margin="10dp"
                    android:padding="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:src="@drawable/terms"
                            android:background="@color/white"/>

                        <TextView
                            android:id="@+id/text_term"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:textSize="15sp"
                            android:layout_margin="5dp"
                            android:text="@string/policy_terms"/>

                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/card_more_geramny"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    app:cardBackgroundColor="@color/cardClr"
                    app:cardElevation="5dp"
                    app:cardCornerRadius="10dp"
                    android:layout_margin="10dp"
                    android:padding="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:src="@drawable/more"
                            android:background="@color/white"/>

                        <TextView
                            android:id="@+id/text_more"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:textSize="15sp"
                            android:layout_margin="5dp"
                            android:text="@string/more_apps"/>

                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/card_rate_geramny"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    app:cardBackgroundColor="@color/cardClr"
                    app:cardElevation="5dp"
                    app:cardCornerRadius="10dp"
                    android:layout_margin="10dp"
                    android:padding="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:src="@drawable/rate"
                            android:background="@color/white"/>

                        <TextView
                            android:id="@+id/text_rate"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:textSize="15sp"
                            android:layout_margin="5dp"
                            android:text="@string/rate_us"/>

                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/card_report_geramny"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    app:cardBackgroundColor="@color/cardClr"
                    app:cardElevation="5dp"
                    app:cardCornerRadius="10dp"
                    android:layout_margin="10dp"
                    android:padding="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:src="@drawable/report"
                            android:background="@color/white"/>

                        <TextView
                            android:id="@+id/text_report"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:textSize="15sp"
                            android:layout_margin="5dp"
                            android:text="@string/report"/>

                    </LinearLayout>
                </androidx.cardview.widget.CardView>

            </LinearLayout>

    </HorizontalScrollView>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_below="@+id/top_scroll"
        android:layout_above="@id/adView"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/card_channel_germany"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/cardClr"
                app:cardElevation="5dp"
                app:cardCornerRadius="10dp"
                android:layout_margin="20dp"
                android:padding="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:src="@drawable/live_channle_germany"
                        android:background="@color/white"/>

                    <TextView
                        android:id="@+id/text_channel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:textSize="15sp"
                        android:layout_margin="5dp"
                        android:text="@string/live_tv_channels"/>

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_below="@+id/card_channel"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="-20dp"
                android:layout_marginRight="15dp"
                android:scaleType="fitXY"
                android:src="@drawable/tv_bottom" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="-50dp"
                android:layout_marginBottom="-20dp"
                android:src="@drawable/antenna" />

            <androidx.cardview.widget.CardView
                android:id="@+id/card_radio_germany"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/cardClr"
                app:cardElevation="5dp"
                app:cardCornerRadius="10dp"
                android:layout_margin="20dp"
                android:padding="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:src="@drawable/live_radio_germany"
                        android:background="@color/white"/>

                    <TextView
                        android:id="@+id/text_radio"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:textSize="15sp"
                        android:drawableRight="@drawable/ic_baseline_circle_24"
                        android:layout_margin="5dp"
                        android:drawableLeft="@drawable/ic_baseline_circle_24"
                        android:text="@string/live_radio"/>

                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </ScrollView>

    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_id">
    </com.google.android.gms.ads.AdView>

</RelativeLayout>